# resources-py-module

./: README.md  pyproject.toml
src/resources/: __init__.py
